# tinyboltz

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  pyproject.toml
configs/profiles/: cheap-cloud.yaml  cpu-dryrun.yaml  tiny-gpu.yaml
docs/: ARCHITECTURE.md  GITHUB_ACTIONS_CI.yml  ROADMAP.md
examples/ligands/: demo_ligands.smi
examples/targets/: demo_target.fasta
packs/tb-inha/: pack.json
packs/tb-inha/ligands/: starter_ligands.smi
runs/demo/: manifest.json  rejected.csv  report.html
runs/demo/inputs/: L0003_ethanol.yaml  L0004_cyclohexane.yaml
runs/profile-demo/: manifest.json  rejected.csv  report.html
runs/profile-demo/inputs/: L0002_caffeine.yaml
runs/screen-demo/: RUNBOOK.md  manifest.json  rejected.csv  report.html  results.csv  results.json
runs/screen-demo/inputs/: L0001_aspirin.yaml
scripts/: smoke.py
src/tinyboltz/: __init__.py  boltzio.py  budget.py  cli.py  diagnostics.py  fasta.py  fetch.py  hf.py  ligands.py  packs.py  plan.py  profiles.py  report.py  runner.py  status.py  validate.py
tests/: test_core.py
